# infra

./: .gitattributes  .gitignore  readme.md
homelab/: README.md  Taskfile.yml  todo.md
homelab/k8s/: Taskfile.yml  makefile
homelab/k8s/apps/jellyfin/tools/config-seeder/: pyproject.toml
homelab/k8s/apps/jellyfin/tools/config-seeder/src/: main.py
homelab/tf-libvirt/: .gitignore  .terraform-docs.yml  .terraform.lock.hcl  README.md  Taskfile.yml  generated.tf  main.tf  outputs.tf  providers.tf  variables.tf  versions.tf  (+1 more)
homelab/vm-manager/: .gitignore  generated.xml  go.mod  go.work  libvirted.xml  main.go  pyproject.toml
homelab/vm-manager/gosrc/: domain.go  go.mod
homelab/vm-manager/src/: main.py
homelab/vm-manager/src/migrations/: hypervisor_native_migration.py  libvirt_tunneled_transport_migration.py  managed_direct_migration.py  managed_peer_to_peer_migration.py  migration.py  unmanaged_direct_migration.py
homelab/vm-manager/src/models/cloud_init/: cloud_init.py  metadata.py  userdata.py
homelab/vm-manager/src/models/infra/: host.py
homelab/vm-manager/src/models/libvirt/: domain.py  snapshot.py
homelab/vm-manager/src/utils/: cidata.py  conn.py  dump.py  ssh.py
homelab/vm-manager/src/utils/default_helpers/: default_debian.py  default_metadata.py  default_userdata.py
homelab/vm-manager/src/wrappers/: domain.py
pi-cluster/: makefile  master.pem
pi-cluster/k8s/apps/jellyfin/tools/: pyproject.toml
pi-cluster/k8s/apps/jellyfin/tools/src/jackett/: .gitignore  fetch-indexers.py
pi-cluster/k8s/apps/jellyfin/tools/src/utils/: utils.py
(+162 files in other folders)
