[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Emilia", email = "voxelost@proton.me"},
]
dependencies = [
    "beautifulsoup4>=4.12.2",
    "requests>=2.31.0",
    "brotli>=1.1.0",
    "browser-cookie3>=0.19.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

