[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Emilia", email = "voxelost@proton.me"},
]
dependencies = [
    "requests>=2.31.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "jedi-language-server>=0.41.1",
]
